fix icon svg collapse component

--- a/sass/components/collapse/collapse.sass
+++ b/sass/components/collapse/collapse.sass
@@ -45,4 +45,4 @@
       padding: $zero
 
       &::after
-        content: url(./icons/keyboard-arrow-down.svg)
+        //content: url(./icons/keyboard-arrow-down.svg)
